# esp-remote

./: .gitignore  .gitmodules  README.md
img/: bin2lua.py  pause.mono  pause.xbm  play.mono  play.xbm
lua/: _init.lua  config.lua.example  dummy_strings.lua  main.lua  spotify.lua  streaming_rest.lua
spotify-backend/: .gitignore  Cargo.toml
spotify-backend/src/: main.rs
