[package]
name = "spotify-backend"
version = "0.1.0"
authors = ["Jack O'Sullivan <jackos1998@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "~1.2"
rand = "~0.6"
log = "~0.4"
chrono = { version = "~0.4", features = [ "serde" ] }
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
rocket = "~0.4.0-rc.1"
reqwest = "~0.9"
